@@ -151,7 +151,7 @@ class GroupsDirectory(BaseDirectory):
         self.checkCreateEntryAllowed()
         group = entry[self.id_field]
         if self.hasEntry(group):
-            raise ValueError("Group '%s' already exists" % group)
+            raise KeyError("Group '%s' already exists" % group)
         aclu = self.acl_users
         if not hasattr(aq_base(aclu), 'userFolderAddGroup'):
             return # XXX
