@@ -15,3 +15,4 @@ New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Search result fields can be customized using getCustomDirectoryResultFields
 - Filter out invalid LDAP attribute names (containing '_') for the filter.
+- Raise KeyError instead of ValueError when it makes sense.
